# apalis-amqp

./: CHANGELOG.md  Cargo.toml  Changelog.md  README.md  deny.toml
.github/workflows/: basic.yml  ci.yml  coverage.yml  integration.yml  release.yml
examples/: README.md  save_result.rs  workflow.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
src/: ack.rs  lib.rs  sink.rs  utils.rs
supply-chain/: config.toml
